--- a/WinAppTrabajoGrupal/WinAppTrabajoGrupal.csproj
+++ b/WinAppTrabajoGrupal/WinAppTrabajoGrupal.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Form3VisualizaciónDataGridcs.Designer.cs">
       <DependentUpon>Form3VisualizaciónDataGridcs.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormInicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormInicio.Designer.cs">
+      <DependentUpon>FormInicio.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DeleteForm.resx">
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3VisualizaciónDataGridcs.resx">
       <DependentUpon>Form3VisualizaciónDataGridcs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormInicio.resx">
+      <DependentUpon>FormInicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
