--- a/WinAppTrabajoGrupal/WinAppTrabajoGrupal.csproj
+++ b/WinAppTrabajoGrupal/WinAppTrabajoGrupal.csproj
@@ -76,6 +76,12 @@
     <Compile Include="FormInicio.Designer.cs">
       <DependentUpon>FormInicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormListar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormListar.Designer.cs">
+      <DependentUpon>FormListar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DeleteForm.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormInicio.resx">
       <DependentUpon>FormInicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormListar.resx">
+      <DependentUpon>FormListar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
